--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: Братья Гранат, 6
+description: Полезная информация для жильцов нашего дома
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
