Playing with links

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Братья Гранат, 6
-description: Полезная информация для жильцов нашего дома
+title: ЖК "Прокшино"
+description: Полезная информация для жителей нашего дома
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
