--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: ЖК "Прокшино"
-description: Полезная информация для жителей нашего дома
+description: Полезная информация для жителей наших домов!
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
